--- a/res/layout/compare_fragment.xml
+++ b/res/layout/compare_fragment.xml
@@ -4,5 +4,34 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
+    <LinearLayout 
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        
+        <Spinner
+            android:id="@+id/year"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:entries="@array/year" />
 
+        </LinearLayout>
+    
+	<AutoCompleteTextView
+            android:id="@+id/autoCompleteTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/course"
+            android:singleLine="true" />
+	
+	<ListView
+            android:id="@+id/institutionList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp">
+
+        </ListView>
 </LinearLayout>
