--- a/res/layout/compare_fragment.xml
+++ b/res/layout/compare_fragment.xml
@@ -3,35 +3,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
-    <LinearLayout 
-        android:orientation="horizontal"
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
         
+        android:orientation="horizontal" >
+
         <Spinner
             android:id="@+id/year"
             android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
             android:entries="@array/year" />
+"
+    </LinearLayout>
 
-        </LinearLayout>
-    
-	<AutoCompleteTextView
-            android:id="@+id/autoCompleteTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/course"
-            android:singleLine="true" />
-	
-	<ListView
-            android:id="@+id/institutionList"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp">
+    <AutoCompleteTextView
+        android:id="@+id/autoCompleteTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="@string/course"
+        android:singleLine="true" />
 
-        </ListView>
+    <ListView
+        android:id="@+id/institutionList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp" >
+    </ListView>
+
 </LinearLayout>
