--- a/res/layout/compare_choose_list_item.xml
+++ b/res/layout/compare_choose_list_item.xml
@@ -8,7 +8,9 @@
         android:id="@+id/compare_institution_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="onCheckboxClicked"
-        android:text="CheckBox" />
+        android:checked="false"
+        android:text="CheckBox"
+        android:textColor="@color/black" />
+    <!-- android:onClick="onCheckboxClicked" -->
 
 </LinearLayout>
