--- a/res/layout/compare_choose_list_item.xml
+++ b/res/layout/compare_choose_list_item.xml
@@ -1,16 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal" >
-
-    <CheckBox
+<CheckBox xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/compare_institution_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:checked="false"
-        android:text="CheckBox"
-        android:textColor="@color/black" />
-    <!-- android:onClick="onCheckboxClicked" -->
-
-</LinearLayout>
+        android:textColor="@color/black"
+        android:focusable="false" />
