--- a/res/layout/compare_show_fragment.xml
+++ b/res/layout/compare_show_fragment.xml
@@ -3,13 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
-    <LinearLayout 
+
+    <LinearLayout
         android:layout_width="match_parent"
 	    android:layout_height="0dp"
 	    android:layout_weight="1"
 	    android:orientation="vertical" >
-        
+
         <TextView
 	    	android:id="@+id/compare_course_name"
 	    	android:layout_width="match_parent"
@@ -21,14 +21,13 @@
 	    	android:textColor="@color/black"
 	    	android:textSize="@dimen/label_dimension"
 	    	android:textStyle="normal" />
-        
-        
-        <LinearLayout 
+
+        <LinearLayout
         	android:layout_width="match_parent"
 	    	android:layout_height="0dp"
 	    	android:layout_weight="1"
 	    	android:orientation="horizontal" >
-	    	
+
             <TextView
 	    		android:id="@+id/compare_first_institution_acronym"
 	    		android:layout_width="0dp"
@@ -36,18 +35,18 @@
 	    		android:layout_weight="10"
 	    		android:background="@color/white"
 	    		android:gravity="center"
-	    		android:text="First acronym"
+	    		android:text=""
 	    		android:textColor="@color/black"
 	    		android:textSize="@dimen/label_dimension"
-	    		android:textStyle="normal" 
-	    		/>
+	    		android:textStyle="normal" />
+
             <FrameLayout
                 android:background="@color/dark_gray"
                 android:layout_height="match_parent"
                 android:layout_width="0dp"
-                android:layout_weight="0.1"
-                >
+                android:layout_weight="0.1" >
             </FrameLayout>
+
             <TextView
 	    		android:id="@+id/compare_second_institution_acronym"
 	    		android:layout_width="0dp"
@@ -55,16 +54,73 @@
 	    		android:layout_weight="10"
 	    		android:background="@color/white"
 	    		android:gravity="center"
-	    		android:text="Second acronym"
+	    		android:text=""
 	    		android:textColor="@color/black"
 	    		android:textSize="@dimen/label_dimension"
 	    		android:textStyle="normal" />
 	    </LinearLayout>
     </LinearLayout>
-    <ListView 
+
+    <ListView
         android:id="@+id/compare_indicator_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"></ListView>
+        android:layout_weight="4">
+    </ListView>
 
+	<LinearLayout 
+        android:layout_width="match_parent"
+	    android:layout_height="0dp"
+	    android:layout_weight="1"
+	    android:orientation="vertical" >
+
+        <TextView
+	    	android:layout_width="match_parent"
+	    	android:layout_height="0dp"
+	    	android:layout_weight="1"
+			android:background="@color/medium_green"
+	    	android:gravity="center"
+	    	android:text="@string/compare_show_better_institutions_results"
+	    	android:textColor="@color/black"
+	    	android:textSize="@dimen/label_dimension"
+	    	android:textStyle="normal" />
+
+        <LinearLayout
+        	android:layout_width="match_parent"
+	    	android:layout_height="0dp"
+	    	android:layout_weight="1"
+	    	android:orientation="horizontal" >
+
+            <TextView
+	    		android:id="@+id/compare_first_institution_better_results"
+	    		android:layout_width="0dp"
+	    		android:layout_height="match_parent"
+	    		android:layout_weight="10"
+	    		android:background="@color/white"
+	    		android:gravity="center"
+	    		android:text=""
+	    		android:textColor="@color/black"
+	    		android:textSize="@dimen/label_dimension"
+	    		android:textStyle="normal" />
+
+            <FrameLayout
+                android:background="@color/dark_gray"
+                android:layout_height="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="0.1">
+            </FrameLayout>
+
+            <TextView
+	    		android:id="@+id/compare_second_institution_better_results"
+	    		android:layout_width="0dp"
+	    		android:layout_height="match_parent"
+	    		android:layout_weight="10"
+	    		android:background="@color/white"
+	    		android:gravity="center"
+	    		android:text=""
+	    		android:textColor="@color/black"
+	    		android:textSize="@dimen/label_dimension"
+	    		android:textStyle="normal" />
+	    </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
