--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -13,5 +13,15 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
-
+	<item
+    	android:id="@+id/action_about"
+    	android:orderInCategory="2"
+    	android:showAsAction="never"
+    	android:title="@string/about"/>
+	
+	<item
+    	android:id="@+id/action_exit"
+    	android:orderInCategory="3"
+    	android:showAsAction="never"
+    	android:title="@string/exit"/>
 </menu>
