--- a/res/layout/about_fragment.xml
+++ b/res/layout/about_fragment.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/QCBackgroundPortrait" 
+    android:background="@drawable/QCBackgroundPortrait"
     android:orientation="vertical" >
 
     <ScrollView
@@ -10,6 +10,7 @@
         android:layout_height="match_parent" >
 
         <LinearLayout
+            android:layout_margin="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
@@ -20,6 +21,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:text="@string/app_name"
+                android:textStyle="bold"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <TextView
@@ -28,8 +30,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/label_dimension"
                 android:gravity="center"
-                android:textSize="@dimen/medium_text"
-                android:text="@string/about_app_text" />
+                android:text="@string/about_app_text"
+                android:textSize="@dimen/medium_text" />
 
             <TextView
                 android:id="@+id/textView3"
@@ -37,8 +39,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/label_dimension"
                 android:gravity="center"
-                android:textSize="@dimen/medium_text"
-                android:text="@string/about_studens_text" />
+                android:text="@string/about_studens_text"
+                android:textSize="@dimen/medium_text" />
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -51,16 +53,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:textSize="@dimen/medium_text"
-                    android:text="@string/about_gpp_studens_title" />
+                    android:text="@string/about_gpp_studens_title"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/medium_text" />
 
                 <TextView
                     android:id="@+id/textView5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:textSize="@dimen/medium_text"
-                    android:text="@string/about_gpp_studens_text" />
+                    android:text="@string/about_gpp_studens_text"
+                    android:textSize="@dimen/medium_text" />
             </LinearLayout>
 
             <LinearLayout
@@ -74,16 +77,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:textSize="@dimen/medium_text"
-                    android:text="@string/about_mds_studens_title" />
+                    android:text="@string/about_mds_studens_title"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/medium_text" />
 
                 <TextView
                     android:id="@+id/textView7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:textSize="@dimen/medium_text"
-                    android:text="@string/about_mds_studens_text" />
+                    android:text="@string/about_mds_studens_text"
+                    android:textSize="@dimen/medium_text" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
