--- a/res/layout/history_list_item.xml
+++ b/res/layout/history_list_item.xml
@@ -2,83 +2,73 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     android:orientation="vertical" >
 
     <LinearLayout
-        android:layout_marginLeft="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:layout_marginLeft="5dp"
         android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/searchBy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/white"
             android:text="@string/search_by"
             android:textColor="@color/black" />
 
         <TextView
-            android:layout_marginLeft="5dp"
             android:id="@+id/option"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_weight="0.75"
-            android:background="@color/white"
             android:textColor="@color/cyan_blue" />
 
         <TextView
             android:id="@+id/by_year"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/white"
             android:text="@string/byYear"
             android:textColor="@color/black" />
 
         <TextView
-            android:layout_marginLeft="5dp"
             android:id="@+id/year"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_weight="0.60"
-            android:background="@color/white"
             android:textColor="@color/cyan_blue" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginLeft="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:layout_marginLeft="5dp"
         android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/by"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/white"
             android:text="@string/by_indicator"
             android:textColor="@color/black" />
 
         <TextView
-            android:layout_marginLeft="5dp"
             android:id="@+id/indicator"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
-            android:background="@color/white"
             android:textColor="@color/cyan_blue" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginLeft="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:layout_marginLeft="5dp"
         android:orientation="horizontal" >
 
         <TextView
@@ -86,7 +76,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.71"
-            android:background="@color/white"
             android:text="@string/between"
             android:textColor="@color/black" />
 
@@ -95,7 +84,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.68"
-            android:background="@color/white"
             android:textAlignment="center"
             android:textColor="@color/cyan_blue" />
 
@@ -104,7 +92,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.30"
-            android:background="@color/white"
             android:text="@string/and"
             android:textAlignment="center"
             android:textColor="@color/black" />
@@ -114,35 +101,32 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/white"
             android:textAlignment="center"
             android:textColor="@color/cyan_blue" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginLeft="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:layout_marginLeft="5dp"
         android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/searchDateTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/white"
             android:text="@string/search_date"
             android:textAlignment="center"
             android:textColor="@color/black" />
 
         <TextView
-            android:layout_marginLeft="5dp"
             android:id="@+id/searchDate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
-            android:background="@color/white"
+            android:lineSpacingExtra="8dp"
             android:textAlignment="center"
             android:textColor="@color/cyan_blue" />
 
