--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="cyan_blue">#0099CC</color>
     <color name="red">#FF0000</color>
     <color name="green">#00FF00</color>
+    <color name="light_gray">#D8D8D8</color>
 
 </resources>
