--- a/res/layout-land/about_fragment.xml
+++ b/res/layout-land/about_fragment.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_qc_landscape"
+    android:background="@drawable/qc_bg"
     android:orientation="vertical" >
 
     <ScrollView
