--- a/res/layout/fragment_list.xml
+++ b/res/layout/fragment_list.xml
@@ -3,6 +3,6 @@
     android:id="@android:id/list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_qc_portrait" >
+    android:background="@drawable/qc_bg" >
 
 </ListView>
